# zte-modem-cli

./: LICENSE  README.md  pyproject.toml  zte_cli.py
