[build-system]
requires = ["setuptools>=64", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "zte-modem-cli"
version = "0.1.0"
description = "CLI tool for ZTE modem/router management (ZLT X25 PRO and compatible models)"
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Akram Ben Aissi" },
]
keywords = ["zte", "modem", "router", "5g", "cli", "ooredoo"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Networking",
]
dependencies = [
    "requests>=2.20",
]

[project.scripts]
zte-cli = "zte_cli:main"

[project.urls]
Homepage = "https://github.com/akram/zte-modem-cli"
Issues = "https://github.com/akram/zte-modem-cli/issues"
